Updated redirect page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<meta HTTP-EQUIV="refresh" CONTENT="0;URL=https://alexanderfrangos.com/">
+<!doctype html>
+<html>
+    <head>
+        <meta HTTP-EQUIV="refresh" CONTENT="0;URL=https://alexanderfrangos.com/">
+    </head>
+    <body></body>
+</html>
