--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <link rel="stylesheet" type="text/css" href="css/style.css?2019-03-10">
         <link rel="canonical" href="https://xanderfrangos.com/" />
         <link rel="prefetch" as="image" href="media/me.jpg" />
+        <link rel="prefetch" as="octet-stream" href="css/fonts/open-sans-v15-latin-regular.woff2" />
+        <link rel="prefetch" as="octet-stream" href="css/fonts/open-sans-v15-latin-700.woff2" />
     </head>
     <body>
         <div class="sidebar">
@@ -271,7 +273,6 @@
                 </div>
             </div>
         </div>
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700" rel="stylesheet">
         <script src="/js/main.merged.min.js?2019-03-10"></script>
     </body>
 </html>
