Page load optimizations

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Xander Frangos - UI Designer &amp; Programmer</title>
+        <link rel="canonical" href="https://xanderfrangos.com/" />
         <meta name="description" content="If a device has a screen on it, I probably want to make something for it. My programming philosopy is to use the right tool for the right job, but also as few tools as possible. An overuse of libraries and plugins is asking for trouble."/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#414575">
@@ -13,16 +14,13 @@
         <meta property="og:image:width" content="1200"/>
         <meta property="og:image:height" content="1200"/>
         <link rel="stylesheet" type="text/css" href="css/style.css?2019-03-10">
-        <link rel="canonical" href="https://xanderfrangos.com/" />
         <link rel="prefetch" as="image" href="media/me.jpg" />
-        <link rel="prefetch" as="octet-stream" href="css/fonts/open-sans-v15-latin-regular.woff2" />
-        <link rel="prefetch" as="octet-stream" href="css/fonts/open-sans-v15-latin-700.woff2" />
+        <link rel="prefetch" href="css/fonts/open-sans-v15-latin-700.woff2" as="font" />
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-54899063-1"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
-
             gtag('config', 'UA-54899063-1');
         </script>
     </head>
@@ -281,6 +279,6 @@
                 </div>
             </div>
         </div>
-        <script src="/js/main.merged.min.js?2019-03-10"></script>
+        <script src="/js/main.merged.min.js?2019-03-10" async></script>
     </body>
 </html>
