--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <meta property="og:image:secure_url" content="https://xanderfrangos.com/media/open-graph.jpg"/>
         <meta property="og:image:width" content="1200"/>
         <meta property="og:image:height" content="1200"/>
-        <link rel="stylesheet" type="text/css" href="css/full.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="prefetch" href="css/fonts/open-sans-v15-latin-700.woff2" as="font" />
     </head>
     <body>
