Initial Jekyll support

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+---
+layout: compress
+---
 <!DOCTYPE html>
 <html class="no-js">
     <head>
@@ -340,7 +343,7 @@
             <div id="footer" class="page checkEnteredBottom" data-offset="-650" data-triggerEvent="setMenuItem" data-untriggerEvent="unsetMenuItem" data-id="4">
                 <div class="wrapper">
                     <hr>
-                    <p class="text-center">&copy; 2019 Alexander "Xander" Frangos. Website built with HTML, CSS, <a href="https://sass-lang.com/" target="_blank" rel="noopener">Sass</a>, JavaScript, <a href="https://jquery.com/" target="_blank" rel="noopener">jQuery</a>, and <a href="https://fonts.google.com/" target="_blank" rel="noopener">Google Fonts</a>. Hosted on <a href="https://github.com/xanderfrangos/xanderfrangos.github.io" target="_blank" rel="noopener">GitHub</a>.</p>
+                    <p class="text-center">&copy; 2019 Alexander "Xander" Frangos. Website built with HTML, CSS, <a href="https://sass-lang.com/" target="_blank" rel="noopener">Sass</a>, JavaScript, <a href="https://jquery.com/" target="_blank" rel="noopener">jQuery</a>, and <a href="https://fonts.google.com/" target="_blank" rel="noopener">Google Fonts</a>. <br>Build <a class="ver" href="{{ site.github.repository_url }}" target="_blank" rel="noopener">{{ site.github.source.branch }}-{{ site.github.build_revision }}</a></p>
                 </div>
             </div>
         </div>
