Added Crushee, CSS adjustments

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ layout: compress
                         <span class="primary">Drupal</span>
                         <span class="primary">React</span>
                         <span class="primary">React Native</span>
+                        <span class="primary">Node.js</span>
                         <span class="primary">Electron</span>
                         <span class="secondary">JavaScript</span>
                         <span class="secondary">PHP</span>
@@ -268,6 +269,28 @@ layout: compress
                         </div>
                         <div class="portfolio-item">
                             <div class="image">
+                                <a href="https://crushee.app" target="_blank" rel="noopener">
+                                    <picture>
+                                        <source srcset="media/previews/webp/crushee-alt.webp" type="image/webp">
+                                        <source srcset="media/previews/crushee-alt.jpg" type="image/jpeg"> 
+                                        <img src="media/previews/crushee-alt.jpg" alt="Den Game Launcher Screenshot" width="1020" height="573" />
+                                    </picture>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3>Crushee</h3>
+                                <div class="tags">
+                                    <span class="primary">Electron App</span>
+                                    <span class="primary">Node.js</span>
+                                    <span class="secondary">JavaScript</span>
+                                    <span>Design</span>
+                                    <span>Personal Project</span>
+                                </div>
+                                <p>Optimization is important to me, but my workflow for optimizing images was not... optimal. It involved jumping between programs to resize/optimize multiple files. So I made <a href="https://crushee.app">Crushee</a> to take care of that for me.</p>
+                            </div>
+                        </div>
+                        <div class="portfolio-item">
+                            <div class="image">
                                 <a href="https://github.com/xanderfrangos/willowtree" target="_blank" rel="noopener">
                                     <picture>
                                         <source srcset="media/previews/webp/willowtree.webp" type="image/webp">
@@ -283,7 +306,7 @@ layout: compress
                                     <span class="secondary">C#</span>
                                     <span>Personal Project</span>
                                 </div>
-                                <p>Built for the game <a href="https://en.wikipedia.org/wiki/Borderlands_(video_game)" target="_blank" rel="noopener noreferrer">Borderlands</a>, this save editor lets you modify your save data from Xbox, PS3, and PC. Edit character stats, progress, weapons, and more.</p>
+                                <p>Built for the game <a href="https://en.wikipedia.org/wiki/Borderlands_(video_game)" target="_blank" rel="noopener noreferrer">Borderlands</a>, this save editor lets you modify your save data from Xbox, PS3, and PC. Edit character stats, progress, weapons, and more. WillowTree# has been downloaded by users <a href="https://sourceforge.net/projects/willowtree/files/stats/timeline?dates=2010-01-17+to+2019-04-17" target="_blank" rel="noopener noreferrer">over 1 million times</a>.</p>
                             </div>
                         </div>
                     </div>
@@ -343,7 +366,7 @@ layout: compress
             <div id="footer" class="page checkEnteredBottom" data-offset="-650" data-triggerEvent="setMenuItem" data-untriggerEvent="unsetMenuItem" data-id="4">
                 <div class="wrapper">
                     <hr>
-                    <p class="text-center">&copy; 2019 Alexander "Xander" Frangos. Website built with HTML, CSS, <a href="https://sass-lang.com/" target="_blank" rel="noopener noreferrer">Sass</a>, JavaScript, <a href="https://jquery.com/" target="_blank" rel="noopener noreferrer">jQuery</a>, and <a href="https://fonts.google.com/" target="_blank" rel="noopener noreferrer">Google Fonts</a>. <br>Build <a class="ver" href="{{ site.github.repository_url }}" target="_blank" rel="noopener">{{ site.github.source.branch }}-{{ site.github.build_revision }}</a></p>
+                    <p class="text-center">&copy; 2019 Alexander "Xander" Frangos. Website built with HTML, CSS, Sass, JavaScript, jQuery, and Google Fonts. <a class="ver" href="{{ site.github.repository_url }}" target="_blank" rel="noopener">{{ site.github.source.branch }}-{{ site.github.build_revision | slice: 0, 7 }}</a></p>
                 </div>
             </div>
         </div>
