Updated Den text

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ layout: compress
                                     <span>Design</span>
                                     <span>Personal Project</span>
                                 </div>
-                                <p>I wasn't happy with the <a href="https://store.steampowered.com/bigpicture" target="_blank" rel="noopener noreferrer"><span>Steam's Big Picture</span></a> interface, so I decided to make my own. It's not exactly done, but I'm happy with the progress so far. Built as an <a href="https://electronjs.org/" target="_blank" rel="noopener noreferrer">Electron</a> app.</p>
+                                <p>I wasn't happy with the <a href="https://store.steampowered.com/bigpicture" target="_blank" rel="noopener noreferrer"><span>Steam's Big Picture</span></a> interface, so I decided to make my own. It's heavily a work-in-progress, but I'm happy with the progress so far. Built as an <a href="https://electronjs.org/" target="_blank" rel="noopener noreferrer">Electron</a> app.</p>
                             </div>
                         </div>
                         <div class="portfolio-item">
