--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: compress
         <meta property="og:image:width" content="1200"/>
         <meta property="og:image:height" content="1200"/>
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <link rel="prefetch" href="css/fonts/open-sans-v15-latin-700.woff2" as="font" />
+        <link href="https://fonts.googleapis.com/css?family=Poppins:700" rel="stylesheet">
     </head>
     <body>
         <script>document.documentElement.className="js";</script>
