--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@ layout: compress
         <meta name="theme-color" content="#414575">
         <meta property="og:title" content="Xander Frangos" />
         <meta property="og:description" content="UI Designer &amp; Programmer" />
-        <meta property="og:image" content="https://xanderfrangos.com/media/open-graph.jpg"/>
-        <meta property="og:image:secure_url" content="https://xanderfrangos.com/media/open-graph.jpg"/>
+        <meta property="og:image" content="https://xanderfrangos.com/media/open-graph.jpg?{{ site.github.build_revision | slice: 0, 7 }}"/>
+        <meta property="og:image:secure_url" content="https://xanderfrangos.com/media/open-graph.jpg?{{ site.github.build_revision | slice: 0, 7 }}"/>
         <meta property="og:image:width" content="1200"/>
         <meta property="og:image:height" content="1200"/>
-        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css?{{ site.github.build_revision | slice: 0, 7 }}">
         <link href="https://fonts.googleapis.com/css?family=Poppins:700" rel="stylesheet">
     </head>
     <body>
@@ -370,7 +370,7 @@ layout: compress
                 </div>
             </div>
         </div>
-        <script src="js/main.merged.min.js"></script>
+        <script src="js/main.merged.min.js?{{ site.github.build_revision | slice: 0, 7 }}"></script>
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-54899063-1"></script>
         <script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-54899063-1');</script>
     </body>
