Updated portfolio item text

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ layout: compress
                                     <span class="secondary">JavaScript</span>
                                     <span>Design</span>
                                 </div>
-                                <p>To match their growing franchise, the <a href="https://www.asuitesalon.com/" target="_blank" rel="noopener noreferrer">A Suite Salon</a> website needed an overhaul. With a significant amount of custom coding on top of Joomla 3, their new website was now just as fast, modern, and stylish as their tenants.</p>
+                                <p>A showman deserves a showman's website. This fun, animated site was made to delightfully inform and sell visitors on Sam Simon's services.</p>
                             </div>
                         </div>
                         <div class="portfolio-item">
@@ -243,7 +243,7 @@ layout: compress
                                     <span class="secondary">JavaScript</span>
                                     <span>Personal Project</span>
                                 </div>
-                                <p>For my girlfriend's birthday, I made her this game. She loved it. 😊<br>The JavaScript-based game engine was written from scratch, with minor use of jQuery.</p>
+                                <p>As any nerdy boyfriend would do, I made my girlfriend a game for her birthday. She loved it. 😊<br>The JavaScript-based game engine was written from scratch, with minor use of jQuery. Warning, inside jokes.</p>
                             </div>
                         </div>
                         <div class="portfolio-item">
