Updated portfolio item text/order

--- a/index.html
+++ b/index.html
@@ -74,27 +74,6 @@ layout: compress
                     <div class="portfolio-list">
                         <div class="portfolio-item">
                             <div class="image">
-                                <a href="https://myvendorcenter.com/" target="_blank" rel="noopener noreferrer">
-                                    <picture>
-                                        <source srcset="media/previews/webp/myvendorcenter.webp" type="image/webp">
-                                        <source srcset="media/previews/myvendorcenter.jpg" type="image/jpeg"> 
-                                        <img src="media/previews/myvendorcenter.jpg" alt="MyVendorCenter Website" width="1020" height="573" />
-                                    </picture>
-                                </a>
-                            </div>
-                            <div class="text">
-                                <h3>MyVendorCenter</h3>
-                                <div class="tags">
-                                    <span class="primary">Proprietary System</span>
-                                    <span class="secondary">PHP</span>
-                                    <span class="secondary">JavaScript</span>
-                                    <span>Design</span>
-                                </div>
-                                <p>I was given the opportunity to overhaul the public-facing pages of <a href="https://myvendorcenter.com/" target="_blank" rel="noopener noreferrer">MyVendorCenter.com</a>. I've also made minor edits/fixes to the back-end, along with managing their GitHub repository. For reference, <a href="https://web.archive.org/web/20171016112718/https://myvendorcenter.com/" target="_blank" rel="noopener noreferrer">here's</a> the old home page.</p>
-                            </div>
-                        </div>
-                        <div class="portfolio-item">
-                            <div class="image">
                                 <a href="https://www.asuitesalon.com/" target="_blank" rel="noopener noreferrer">
                                     <picture>
                                         <source srcset="media/previews/webp/asuitesalon.webp" type="image/webp">
@@ -112,6 +91,27 @@ layout: compress
                                     <span>Design</span>
                                 </div>
                                 <p>To match their growing franchise, the <a href="https://www.asuitesalon.com/" target="_blank" rel="noopener noreferrer">A Suite Salon</a> website needed an overhaul. With a significant amount of custom coding on top of Joomla 3, their new website was now just as fast, modern, and stylish as their tenants.</p>
+                            </div>
+                        </div>
+                        <div class="portfolio-item">
+                            <div class="image">
+                                <a href="https://myvendorcenter.com/" target="_blank" rel="noopener noreferrer">
+                                    <picture>
+                                        <source srcset="media/previews/webp/myvendorcenter.webp" type="image/webp">
+                                        <source srcset="media/previews/myvendorcenter.jpg" type="image/jpeg"> 
+                                        <img src="media/previews/myvendorcenter.jpg" alt="MyVendorCenter Website" width="1020" height="573" />
+                                    </picture>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3>MyVendorCenter</h3>
+                                <div class="tags">
+                                    <span class="primary">Proprietary System</span>
+                                    <span class="secondary">PHP</span>
+                                    <span class="secondary">JavaScript</span>
+                                    <span>Design</span>
+                                </div>
+                                <p>I was given the opportunity to overhaul the public-facing pages of <a href="https://myvendorcenter.com/" target="_blank" rel="noopener noreferrer">MyVendorCenter.com</a>. I've also made minor edits/fixes to the back-end, along with managing their GitHub repository. For reference, <a href="https://web.archive.org/web/20171016112718/https://myvendorcenter.com/" target="_blank" rel="noopener noreferrer">here's</a> the old home page.</p>
                             </div>
                         </div>
                         <div class="portfolio-item">
@@ -173,7 +173,7 @@ layout: compress
                                     <span>Design</span>
                                     <span>Personal Project</span>
                                 </div>
-                                <p>I got tired of everyone asking me what I wanted for my birthday, but I didn't want to use something like WunderList. So I made <a href="https://wantsack.com" target="_blank" rel="noopener">my own wishlist website</a>. (The <a href="https://alexanderfrangos.com/wishlist/index2.html" target="_blank" rel="noopener noreferrer">old version</a> of this site is pretty fun too!) You can't make your own list yet, but I'll get to that eventually.</p>
+                                <p>Everyone always asks me: "Xander, what do you want for Christmas". Since "I don't know" isn't an acceptable answer, and I'm not a fan of WunderList, I made <a href="https://wantsack.com" target="_blank" rel="noopener">my own wishlist website</a>. (The <a href="https://alexanderfrangos.com/wishlist/index2.html" target="_blank" rel="noopener noreferrer">old version</a> of this site is pretty fun too!) New accounts are invite only, sorry.</p>
                             </div>
                         </div>
                         <div class="portfolio-item">
@@ -206,6 +206,49 @@ layout: compress
                     <h2 class="header-med text-center">Apps</h2>
                     <p class="text-center"><strong>Apps, games, and apps for games!</strong></p>
                     <div class="portfolio-list">
+                        <div class="portfolio-item">
+                            <div class="image">
+                                <a href="https://crushee.app" target="_blank" rel="noopener">
+                                    <picture>
+                                        <source srcset="media/previews/webp/crushee-alt.webp" type="image/webp">
+                                        <source srcset="media/previews/crushee-alt.jpg" type="image/jpeg"> 
+                                        <img src="media/previews/crushee-alt.jpg" alt="Den Game Launcher Screenshot" width="1020" height="573" />
+                                    </picture>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3>Crushee</h3>
+                                <div class="tags">
+                                    <span class="primary">Electron App</span>
+                                    <span class="primary">Node.js</span>
+                                    <span class="secondary">JavaScript</span>
+                                    <span>Design</span>
+                                    <span>Personal Project</span>
+                                </div>
+                                <p>Optimization is important to me, but my workflow for optimizing images was not... optimal. It involved jumping between programs to resize/optimize multiple files. So I made <a href="https://crushee.app">Crushee</a> to take care of that for me.</p>
+                            </div>
+                        </div>
+                        <div class="portfolio-item">
+                            <div class="image">
+                                <a href="https://github.com/xanderfrangos/electron-game-launcher" target="_blank" rel="noopener">
+                                    <picture>
+                                        <source srcset="media/previews/webp/den.webp" type="image/webp">
+                                        <source srcset="media/previews/den.jpg" type="image/jpeg"> 
+                                        <img src="media/previews/den.jpg" alt="Den Game Launcher Screenshot" width="1020" height="573" />
+                                    </picture>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3>Den Game Launcher</h3>
+                                <div class="tags">
+                                    <span class="primary">Electron App</span>
+                                    <span class="secondary">React</span>
+                                    <span>Design</span>
+                                    <span>Personal Project</span>
+                                </div>
+                                <p>I wasn't happy with the <a href="https://store.steampowered.com/bigpicture" target="_blank" rel="noopener noreferrer"><span>Steam's Big Picture</span></a> interface, so I decided to make my own. It's heavily a work-in-progress, but I'm happy with the progress so far. Even if I never finish it, it's been an excellent excercise in building an interface for gamepads.</p>
+                            </div>
+                        </div>
                         <div class="portfolio-item">
                             <div class="image">
                                 <a href="https://itunes.apple.com/us/app/myvendorcenter/id1257129048" target="_blank" rel="noopener noreferrer">
@@ -244,49 +287,6 @@ layout: compress
                                     <span>Personal Project</span>
                                 </div>
                                 <p>As any nerdy boyfriend would do, I made my girlfriend a game for her birthday. She loved it. 😊<br>The JavaScript-based game engine was written from scratch, with minor use of jQuery. Warning, inside jokes.</p>
-                            </div>
-                        </div>
-                        <div class="portfolio-item">
-                            <div class="image">
-                                <a href="https://github.com/xanderfrangos/electron-game-launcher" target="_blank" rel="noopener">
-                                    <picture>
-                                        <source srcset="media/previews/webp/den.webp" type="image/webp">
-                                        <source srcset="media/previews/den.jpg" type="image/jpeg"> 
-                                        <img src="media/previews/den.jpg" alt="Den Game Launcher Screenshot" width="1020" height="573" />
-                                    </picture>
-                                </a>
-                            </div>
-                            <div class="text">
-                                <h3>Den Game Launcher</h3>
-                                <div class="tags">
-                                    <span class="primary">Electron App</span>
-                                    <span class="secondary">React</span>
-                                    <span>Design</span>
-                                    <span>Personal Project</span>
-                                </div>
-                                <p>I wasn't happy with the <a href="https://store.steampowered.com/bigpicture" target="_blank" rel="noopener noreferrer"><span>Steam's Big Picture</span></a> interface, so I decided to make my own. It's heavily a work-in-progress, but I'm happy with the progress so far. Built as an <a href="https://electronjs.org/" target="_blank" rel="noopener noreferrer">Electron</a> app.</p>
-                            </div>
-                        </div>
-                        <div class="portfolio-item">
-                            <div class="image">
-                                <a href="https://crushee.app" target="_blank" rel="noopener">
-                                    <picture>
-                                        <source srcset="media/previews/webp/crushee-alt.webp" type="image/webp">
-                                        <source srcset="media/previews/crushee-alt.jpg" type="image/jpeg"> 
-                                        <img src="media/previews/crushee-alt.jpg" alt="Den Game Launcher Screenshot" width="1020" height="573" />
-                                    </picture>
-                                </a>
-                            </div>
-                            <div class="text">
-                                <h3>Crushee</h3>
-                                <div class="tags">
-                                    <span class="primary">Electron App</span>
-                                    <span class="primary">Node.js</span>
-                                    <span class="secondary">JavaScript</span>
-                                    <span>Design</span>
-                                    <span>Personal Project</span>
-                                </div>
-                                <p>Optimization is important to me, but my workflow for optimizing images was not... optimal. It involved jumping between programs to resize/optimize multiple files. So I made <a href="https://crushee.app">Crushee</a> to take care of that for me.</p>
                             </div>
                         </div>
                         <div class="portfolio-item">
