--- a/index.html
+++ b/index.html
@@ -210,9 +210,9 @@ layout: compress
                             <div class="image">
                                 <a href="https://crushee.app" target="_blank" rel="noopener">
                                     <picture>
-                                        <source srcset="media/previews/webp/crushee-alt.webp" type="image/webp">
-                                        <source srcset="media/previews/crushee-alt.jpg" type="image/jpeg"> 
-                                        <img src="media/previews/crushee-alt.jpg" alt="Den Game Launcher Screenshot" width="1020" height="573" />
+                                        <source srcset="media/previews/webp/crushee.webp" type="image/webp">
+                                        <source srcset="media/previews/crushee.jpg" type="image/jpeg"> 
+                                        <img src="media/previews/crushee.jpg" alt="Crushee App" width="1020" height="573" />
                                     </picture>
                                 </a>
                             </div>
