--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ layout: compress
                                     <picture>
                                         <source srcset="media/previews/webp/asuitesalon.webp" type="image/webp">
                                         <source srcset="media/previews/asuitesalon.jpg" type="image/jpeg"> 
-                                        <img src="media/previews/asuitesalon.jpg" alt="A Suite Salon Website" width="1020" height="573" />
+                                        <img src="media/previews/asuitesalon.jpg" alt="A Suite Salon Website" width="1020" height="573" loading="lazy" />
                                     </picture>
                                 </a>
                             </div>
@@ -99,7 +99,7 @@ layout: compress
                                     <picture>
                                         <source srcset="media/previews/webp/myvendorcenter.webp" type="image/webp">
                                         <source srcset="media/previews/myvendorcenter.jpg" type="image/jpeg"> 
-                                        <img src="media/previews/myvendorcenter.jpg" alt="MyVendorCenter Website" width="1020" height="573" />
+                                        <img src="media/previews/myvendorcenter.jpg" alt="MyVendorCenter Website" width="1020" height="573" loading="lazy" />
                                     </picture>
                                 </a>
                             </div>
@@ -120,7 +120,7 @@ layout: compress
                                     <picture>
                                         <source srcset="media/previews/webp/nostalgicamerica.webp" type="image/webp">
                                         <source srcset="media/previews/nostalgicamerica.jpg" type="image/jpeg"> 
-                                        <img src="media/previews/nostalgicamerica.jpg" alt="Nostalgic America Website" width="1020" height="573" />
+                                        <img src="media/previews/nostalgicamerica.jpg" alt="Nostalgic America Website" width="1020" height="573" loading="lazy" />
                                     </picture>
                                 </a>
                             </div>
@@ -141,7 +141,7 @@ layout: compress
                                     <picture>
                                         <source srcset="media/previews/webp/samsimonpresents.webp" type="image/webp">
                                         <source srcset="media/previews/samsimonpresents.jpg" type="image/jpeg"> 
-                                        <img src="media/previews/samsimonpresents.jpg" alt="Sam Simon Website" width="1020" height="573" />
+                                        <img src="media/previews/samsimonpresents.jpg" alt="Sam Simon Website" width="1020" height="573" loading="lazy" />
                                     </picture>
                                 </a>
                             </div>
@@ -161,7 +161,7 @@ layout: compress
                                     <picture>
                                         <source srcset="media/previews/webp/wantsack.webp" type="image/webp">
                                         <source srcset="media/previews/wantsack.jpg" type="image/jpeg"> 
-                                        <img src="media/previews/wantsack.jpg" alt="WantSack Website" width="1020" height="573" />
+                                        <img src="media/previews/wantsack.jpg" alt="WantSack Website" width="1020" height="573" loading="lazy" />
                                     </picture>
                                 </a>
                             </div>
@@ -182,7 +182,7 @@ layout: compress
                                     <picture>
                                         <source srcset="media/previews/webp/wasteadvantagemag.webp" type="image/webp">
                                         <source srcset="media/previews/wasteadvantagemag.jpg" type="image/jpeg"> 
-                                        <img src="media/previews/wasteadvantagemag.jpg" alt="Waste Advantage Website" width="1020" height="573" />
+                                        <img src="media/previews/wasteadvantagemag.jpg" alt="Waste Advantage Website" width="1020" height="573" loading="lazy" />
                                     </picture>
                                 </a>
                             </div>
@@ -212,7 +212,7 @@ layout: compress
                                     <picture>
                                         <source srcset="media/previews/webp/crushee.webp" type="image/webp">
                                         <source srcset="media/previews/crushee.jpg" type="image/jpeg"> 
-                                        <img src="media/previews/crushee.jpg" alt="Crushee App" width="1020" height="573" />
+                                        <img src="media/previews/crushee.jpg" alt="Crushee App" width="1020" height="573" loading="lazy" />
                                     </picture>
                                 </a>
                             </div>
@@ -234,7 +234,7 @@ layout: compress
                                     <picture>
                                         <source srcset="media/previews/webp/den.webp" type="image/webp">
                                         <source srcset="media/previews/den.jpg" type="image/jpeg"> 
-                                        <img src="media/previews/den.jpg" alt="Den Game Launcher Screenshot" width="1020" height="573" />
+                                        <img src="media/previews/den.jpg" alt="Den Game Launcher Screenshot" width="1020" height="573" loading="lazy" />
                                     </picture>
                                 </a>
                             </div>
@@ -255,7 +255,7 @@ layout: compress
                                     <picture>
                                         <source srcset="media/previews/webp/myvc-app.webp" type="image/webp">
                                         <source srcset="media/previews/myvc-app.jpg" type="image/jpeg"> 
-                                        <img src="media/previews/myvc-app.jpg" alt="MyVendorCenter App" width="1020" height="573" />
+                                        <img src="media/previews/myvc-app.jpg" alt="MyVendorCenter App" width="1020" height="573" loading="lazy" />
                                     </picture>
                                 </a>
                             </div>
@@ -275,7 +275,7 @@ layout: compress
                                     <picture>
                                         <source srcset="media/previews/webp/rei-adventure.webp" type="image/webp">
                                         <source srcset="media/previews/rei-adventure.jpg" type="image/jpeg"> 
-                                        <img src="media/previews/rei-adventure.jpg" alt="Rei Adventure Screenshot" width="1020" height="573" /></picture>
+                                        <img src="media/previews/rei-adventure.jpg" alt="Rei Adventure Screenshot" width="1020" height="573" loading="lazy" /></picture>
                                 </a>
                             </div>
                             <div class="text">
@@ -295,7 +295,7 @@ layout: compress
                                     <picture>
                                         <source srcset="media/previews/webp/willowtree.webp" type="image/webp">
                                         <source srcset="media/previews/willowtree.jpg" type="image/jpeg"> 
-                                        <img src="media/previews/willowtree.jpg" alt="WillowTree# Screenshot" width="1020" height="573" />
+                                        <img src="media/previews/willowtree.jpg" alt="WillowTree# Screenshot" width="1020" height="573" loading="lazy" />
                                     </picture>
                                 </a>
                             </div>
@@ -324,7 +324,7 @@ layout: compress
                                     <picture>
                                         <source srcset="media/previews/webp/fcb-vid.webp" type="image/webp">
                                         <source srcset="media/previews/fcb-vid.jpg" type="image/jpeg"> 
-                                        <img src="media/previews/fcb-vid.jpg" alt="FCB Video Screenshot" width="1020" height="573" />             
+                                        <img src="media/previews/fcb-vid.jpg" alt="FCB Video Screenshot" width="1020" height="573" loading="lazy" />             
                                     </picture>
                                 </a>
                             </div>
@@ -345,7 +345,7 @@ layout: compress
                                     <picture>
                                         <source srcset="media/previews/webp/myvc-video.webp" type="image/webp">
                                         <source srcset="media/previews/myvc-video.jpg" type="image/jpeg"> 
-                                        <img src="media/previews/myvc-video.jpg" alt="MyVC Video Screenshot" width="1020" height="573" />
+                                        <img src="media/previews/myvc-video.jpg" alt="MyVC Video Screenshot" width="1020" height="573" loading="lazy" />
                                     </picture>
                                 </a>
                             </div>
