--- a/index.html
+++ b/index.html
@@ -230,6 +230,28 @@ layout: compress
                         </div>
                         <div class="portfolio-item">
                             <div class="image">
+                                <a href="https://twinkletray.com" target="_blank" rel="noopener">
+                                    <picture>
+                                        <source srcset="media/previews/webp/twinkle-tray.webp" type="image/webp">
+                                        <source srcset="media/previews/twinkle-tray.jpg" type="image/jpeg"> 
+                                        <img src="media/previews/twinkle-tray.jpg" alt="Twinkle Tray App" width="1020" height="573" loading="lazy" />
+                                    </picture>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3>Twinkle Tray</h3>
+                                <div class="tags">
+                                    <span class="primary">Electron App</span>
+                                    <span class="primary">Node.js</span>
+                                    <span class="secondary">JavaScript</span>
+                                    <span>Design</span>
+                                    <span>Personal Project</span>
+                                </div>
+                                <p>As someone that uses multiple monitors at 2AM, being able to adjust the brightness of them all is important to me. There are a few options for doing so in Windows, but they tend to lack features and are... ugly. <a href="https://twinkletray.com">Twinkle Tray</a> was created to be both pretty and functional. Because, yes, you <em>can</em> have it all. You click the little star icon in your system tray to get immediate access to the brightness levels of all displays.</p>
+                            </div>
+                        </div>
+                        <div class="portfolio-item">
+                            <div class="image">
                                 <a href="https://github.com/xanderfrangos/electron-game-launcher" target="_blank" rel="noopener">
                                     <picture>
                                         <source srcset="media/previews/webp/den.webp" type="image/webp">
