Cut down Twinkle Tray description

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ layout: compress
                                     <span>Design</span>
                                     <span>Personal Project</span>
                                 </div>
-                                <p>As someone that uses multiple monitors at 2AM, being able to adjust the brightness of them all is important to me. There are a few options for doing so in Windows, but they tend to lack features and are... ugly. <a href="https://twinkletray.com">Twinkle Tray</a> was created to be both pretty and functional. Because, yes, you <em>can</em> have it all. You click the little star icon in your system tray to get immediate access to the brightness levels of all displays.</p>
+                                <p>As someone that uses multiple monitors at 2AM, being able to adjust the brightness of them all is important to me. There are a few options for doing so in Windows, but they lack features and are... ugly. <a href="https://twinkletray.com">Twinkle Tray</a> was created to be both pretty <em>and</em> functional.</p>
                             </div>
                         </div>
                         <div class="portfolio-item">
