--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ layout: compress
                                     <span>Design</span>
                                     <span>Personal Project</span>
                                 </div>
-                                <p>As someone that uses multiple monitors at 2AM, being able to adjust the brightness of them all is important to me. There are a few options for doing so in Windows, but they lack features and are... ugly. <a href="https://twinkletray.com">Twinkle Tray</a> was created to be both pretty <em>and</em> functional.</p>
+                                <p>As someone who uses multiple monitors at 2AM, being able to easily adjust their brightness is important to me. There are a few options for doing so in Windows, but they lack features and are... ugly. <a href="https://twinkletray.com">Twinkle Tray</a> was created to be both pretty <em>and</em> functional.</p>
                             </div>
                         </div>
                         <div class="portfolio-item">
