--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ layout: compress
                     <h2 class="header-med text-center">Web</h2>
                     <p class="text-center"><strong>A few highlights from over the years.</strong></p>
                     <div class="portfolio-list">
-                        <div class="portfolio-item">
+                        <!--<div class="portfolio-item">
                             <div class="image">
                                 <a href="https://www.asuitesalon.com/" target="_blank" rel="noopener noreferrer">
                                     <picture>
@@ -226,7 +226,7 @@ layout: compress
                                 </div>
                                 <p>To match their growing franchise, the <a href="https://www.asuitesalon.com/" target="_blank" rel="noopener noreferrer">A Suite Salon</a> website needed an overhaul. With a significant amount of custom coding on top of Joomla 3, their new website was now just as fast, modern, and stylish as their tenants.</p>
                             </div>
-                        </div>
+                        </div>-->
                         <div class="portfolio-item">
                             <div class="image">
                                 <a href="https://myvendorcenter.com/" target="_blank" rel="noopener noreferrer">
